--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -18,9 +18,7 @@ $bgModal: rgba(6, 13, 30, 0.5);
 
 .row-limit-size-db {
   @media screen and (min-width: 950px) {
-    padding-top: 40px;
-    padding-left: 100px;
-    padding: 40px 100px;
+    padding: 0px 30px;
   }
 }
 
@@ -839,7 +837,10 @@ section#dashboard-page-profil {
 // ----------  SECTION lOAN BOOK REGISTER ----------
 
 section#loan-register {
-  padding: 30px 30px 0;
+  padding: 0 30px;
+  height: fit-content;
+
+
   div#container-list-book-crud {
     ul.list-book-crud {
       li.item-book-crud {
