--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -202,6 +202,7 @@ main div#box-delete-book a#btn-confirmed-delete-book:hover {
   }
 }
 header#side-bar-log {
+  z-index: 9999;
   display: none;
 }
 @media screen and (min-width: 950px) {
@@ -226,6 +227,7 @@ header#side-bar-log #sidebar-wrapper.active {
   z-index: 999;
 }
 header#side-bar-log #sidebar-wrapper nav#main-sidebar {
+  z-index: 9999;
   width: 100%;
   height: 100%;
   background-color: #0868ae;
@@ -838,7 +840,7 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 8px;
-  z-index: 999;
+  z-index: 99;
   margin-bottom: 50px;
   text-align: start;
   display: block;
@@ -1203,11 +1205,11 @@ div#confirmed-error:hover {
   margin-bottom: 20px;
 }
 .container-crud-book-tabs div.search-add-crud-book {
+  z-index: 994;
   position: sticky;
   top: 0;
   width: 100%;
   background-color: #fff; /* couleur de fond pour la div */
-  z-index: 3;
   border-bottom: 1px solid gray;
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form {
@@ -1410,7 +1412,7 @@ div#confirmed-error:hover {
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud {
   position: absolute;
   right: 50px;
-  top: 0;
+  top: -20px;
   width: 220px;
   height: -moz-fit-content;
   height: fit-content;
@@ -1418,7 +1420,7 @@ div#confirmed-error:hover {
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 8px;
-  z-index: 999;
+  z-index: 9;
   margin-bottom: 50px;
   text-align: start;
   display: block;
