--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1364,9 +1364,21 @@ div#confirmed-error {
     border-bottom: 1px solid gray;
 
     div.search-crud-input {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      @media screen and (min-width: 1200px) {
+        flex-wrap: wrap;
+        justify-content: inherit;
+      align-items: inherit;
+      }
+
       form {
         position: relative;
         display: flex;
+        width: 100%;
         flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
@@ -1401,12 +1413,12 @@ div#confirmed-error {
           justify-content: center;
           align-items: center;
           width: 100%;
-          max-width: 400px;
           margin-bottom: 10px;
 
           @media screen and (min-width: 1200px) {
+            flex-wrap: wrap;
             width: 60%;
-            max-width: 600px;
+            max-width: 800px;
             margin-bottom: inherit;
           }
 
@@ -1446,11 +1458,11 @@ div#confirmed-error {
 
         div.group-tool-standard {
           width: 100%;
+          max-width: 230px;
           display: flex;
-          justify-content: space-around;
-          align-items: center;
+          margin: 0 auto;
 
-          @media screen and (min-width: 650px) {
+          @media screen and (min-width: 1200px) {
             width: inherit;
           }
 
@@ -1515,6 +1527,7 @@ div#confirmed-error {
             // width: 150px;
             text-align: center;
             padding: 5px;
+            word-break: break-all;
 
             img.pict-book-crud {
               height: 100px;
@@ -2191,6 +2204,8 @@ section#dashboard-page-book-edit {
 // ----------  SECTION lOAN BOOK REGISTER ----------
 
 section#crud-user {
+  padding: 0 30px;
+
   div#box-crud-user {
     div.item-complete-center {
       width: 100%;
