--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1383,7 +1383,7 @@ div#confirmed-error {
         flex-direction: column;
         justify-content: center;
         align-items: baseline;
-        margin-top: -10px;
+        // margin-top: -10px;
         padding: 5px;
 
         @media screen and (min-width: 1200px) {
@@ -1418,7 +1418,7 @@ div#confirmed-error {
           @media screen and (min-width: 1200px) {
             flex-wrap: wrap;
             width: 60%;
-            max-width: 800px;
+            // max-width: 800px;
             margin-bottom: inherit;
           }
 
